--- a/ClientApp/nbproject/project.properties
+++ b/ClientApp/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/ClientApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.javax.json-1.1.4.jar=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\8.2\\javax.json-1.1.4.jar
+file.reference.javax.json-1.1.4.jar=C:\\Program Files\\NetBeans 8.2\\javax.json-1.1.4.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
