--- a/ClientApp/nbproject/private/private.properties
+++ b/ClientApp/nbproject/private/private.properties
@@ -16,6 +16,6 @@ user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\8.2\\build.pro
 
 user.properties.file=C:\\Users\\uesr\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
-user.properties.file=C:\\Users\\khali\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\uesr\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
