--- a/ClientApp/nbproject/private/private.properties
+++ b/ClientApp/nbproject/private/private.properties
@@ -4,6 +4,7 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.javax.json-1.1.4.jar=C:\\Program Files\\NetBeans 8.2\\javax.json-1.1.4.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
@@ -18,6 +19,6 @@ user.properties.file=C:\\Users\\a\\AppData\\Roaming\\NetBeans\\8.2\\build.proper
 
 user.properties.file=C:\\Users\\uesr\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
-user.properties.file=C:\\Users\\uesr\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\khali\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
