eddited loging and added user identifyin object in register and log in

--- a/ClientApp/nbproject/private/private.properties
+++ b/ClientApp/nbproject/private/private.properties
@@ -18,6 +18,6 @@ user.properties.file=C:\\Users\\a\\AppData\\Roaming\\NetBeans\\8.2\\build.proper
 
 user.properties.file=C:\\Users\\uesr\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
-user.properties.file=C:\\Users\\uesr\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
