--- a/ClientApp/nbproject/project.properties
+++ b/ClientApp/nbproject/project.properties
@@ -32,7 +32,7 @@ excludes=
 
 
 
-file.reference.javax.json-1.1.4.jar=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\8.2\\javax.json-1.1.4.jar
+file.reference.javax.json-1.1.4.jar=C:\\Users\\a\\Downloads\\javax.json-1.1.4.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
